fix collapsing layout

--- a/css/common.css
+++ b/css/common.css
@@ -15,6 +15,7 @@
 body {
     margin: 0;
     padding: 0;
+    min-width: 1000px;
 
     font-family: "Noto Sans JP", Helvetica;
     font-size: 16px;
